[package]
name = "binderbinder"
version = "0.1.0"
edition = "2021"

[dependencies]
rustix = { version = "1.1.3", features = ["fs", "mount", "process"] }
tokio = { version = "1", features = ["full"] }
byteorder = "1.5"
dashmap = "6"
async-trait = "0.1.89"
bitflags = "2.10.0"
tracing = "0.1.44"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3.22"
